syntax = "proto3";

package getfile;
option csharp_namespace = "GreeterServer";

service GetFile {
    rpc ClientGetFile (Void) returns (stream FileInfo) {}
}

message Void {}

message FileInfo {
    string  name = 1;
    string  size = 2;
    string  IDSlave = 3;
}
